# Myosense

./: CMakeLists.txt  README.md
front/: mainwindow.ui
libs/KNN_Data/: Ytrain.csv
src/: classifier.cpp  classifier.h  mainwindow.cpp  mainwindow.h  myoread.cpp  myoread.hpp
